feat: home layout done

--- a/src/app.html
+++ b/src/app.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+	<head>
+		<meta charset="utf-8" />
+		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link rel="stylesheet" href="%sveltekit.assets%/style/reset.css" />
+		<link rel="stylesheet" href="%sveltekit.assets%/style/main.css" />
+		<link rel="stylesheet" href="%sveltekit.assets%/style/grid.css" />
+		<link rel="stylesheet" href="%sveltekit.assets%/style/color.css" />
+		<link rel="stylesheet" href="%sveltekit.assets%/style/font.css" />
+		%sveltekit.head%
+	</head>
 
-<head>
-	<meta charset="utf-8" />
-	<link rel="icon" href="%sveltekit.assets%/favicon.png" />
-	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<link rel="stylesheet" href="%sveltekit.assets%/style/reset.css">
-	<link rel="stylesheet" href="%sveltekit.assets%/style/global.css">
-	%sveltekit.head%
-</head>
-
-<body>
-	<div>%sveltekit.body%</div>
-</body>
-
+	<body>
+		<div>%sveltekit.body%</div>
+	</body>
 </html>
